--- a/cmake/CMakeLists.txt
+++ b/cmake/CMakeLists.txt
@@ -558,12 +558,12 @@ endif()
 if (onnxruntime_BUILD_SHARED_LIB OR onnxruntime_ENABLE_PYTHON)
   if (onnxruntime_ENABLE_PYTHON)
     if (onnxruntime_ENABLE_LANGUAGE_INTEROP_OPS OR onnxruntime_REQUIRE_PYTHON_EMBED_LIB)
-      find_package(Python 3.8 COMPONENTS Interpreter Development NumPy)
+      find_package(Python ${PYTHON_VERSION} COMPONENTS Interpreter Development NumPy)
     else()
-      find_package(Python 3.8 COMPONENTS Interpreter Development.Module NumPy)
+      find_package(Python ${PYTHON_VERSION} COMPONENTS Interpreter Development.Module NumPy)
     endif()
   else()
-    find_package(Python 3.8 COMPONENTS Interpreter)
+    find_package(Python ${PYTHON_VERSION} COMPONENTS Interpreter)
   endif()
 endif()
 
